gaps adaptive fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto min-content;
-  gap: 1em 1em;
+  gap: 0 1em;
   grid-template-areas:
     "actives-cell"
     "passives-cell"
@@ -67,6 +67,7 @@ body {
   @include element-border;
   color: $primary-color;
   line-height: 2em;
+  margin-bottom: 1em;
 
   @include main-tile;
 
